# cale-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20231017064804_events.up.sql
src/: lib.rs  main.rs
