[package]
name = "cale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    'chrono',
] }
tokio = { version = "1", features = ["full"] }
